--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-camera": "^3.38.0",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-image-marker": "^0.6.1",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.10.1"
