사진찍기 화면에 회전 ui 적용 및 네비게이션 헤더 제거

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,8 @@ target 'SeedShot' do
 
   pod 'RNFS', :path => '../node_modules/react-native-fs'
 
+  pod 'react-native-orientation', :path => '../node_modules/react-native-orientation'
+
   target 'SeedShotTests' do
     inherit! :complete
     # Pods for testing
